push test responsive balls with shenron

--- a/indexmobil.html
+++ b/indexmobil.html
@@ -63,6 +63,9 @@
                         <button class="fermeture" onclick="fermeture_auteur()"></button>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, laboriosam! Quisquam reiciendis soluta rem eligendi, quam fuga sed placeat
                         nam porro possimus labore, necessitatibus voluptatem ex tenetur consectetur, cum eos!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta deleniti modi, magni accusantium autem nemo. Porro sapiente ut, veritatis quos
+                        eveniet minus voluptatem quisquam vel. Et magni assumenda impedit soluta. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus 
+                        consequatur itaque suscipit? Provident magni nulla quisquam. Sunt, exercitationem! Ab perspiciatis iste, corrupti dignissimos inventore molestiae enim? Velit modi optio illo.
                     
                     </div>
 
