final push projet1 all is done

--- a/indexmobil.html
+++ b/indexmobil.html
@@ -32,11 +32,15 @@
                     <button class="boule" id="auteur" onclick="auteur()">Le mot de l’auteur</button>
                     <div id="display_auteur" style="display:none;">
                         <button class="fermeture" onclick="fermeture_auteur()"></button>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, laboriosam! Quisquam reiciendis soluta rem eligendi, quam fuga sed placeat
-                        nam porro possimus labore, necessitatibus voluptatem ex tenetur consectetur, cum eos!
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta deleniti modi, magni accusantium autem nemo. Porro sapiente ut, veritatis quos
-                        eveniet minus voluptatem quisquam vel. Et magni assumenda impedit soluta. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus 
-                        consequatur itaque suscipit? Provident magni nulla quisquam. Sunt, exercitationem! Ab perspiciatis iste, corrupti dignissimos inventore molestiae enim? Velit modi optio illo.
+                        Soyez les Bienvenues sur le site du MangaVore, ce site a était conçu dans le but de partager avec vous
+                        ma passion pour les mangas. Comme beaucoup d'autres qui ont comme moi grandi dans les années 80 j'ai été
+                        bercé par les animés que je retrouvais chaque jour après l'école et les mercredis, un grand merci au Club Dorothée !
+                        Ce n'est que quelques années plus tard que j'ai découvert les mangas papiers lorsque l'on m'a offert mon premier manga 
+                        DNA2 et ce fût un réel coup de foudre, depuis ce jour la j'ai agrandi ma collection pour detenir aujourd'hui un peu plus de 
+                        800 volumes dans diverses catégories. Je vous invite donc à venir découvrir cet univers avec moi peut être retrouver des souvenirs d'enfance
+                        oubliés, n'hésitez pas à conulter la rubrique Votre avis pour nous partager vos goûts et vos Mangas favoris. Afin de rester en 
+                        contact et me permettre d'améliorer le site laissez moi vos commentaires et suggestions dans la rubrique Contacts.
+                        Je vous souhaite une bonne visite dans mon univers...
                         
                     </div>
                     <button class="boule" id="shonen" onclick="shonen()">Shonen</button>
