--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Bienvenue chez le MangaVore</title>
             <link href="https://fonts.googleapis.com/css?family=Hind+Madurai&display=swap" rel="stylesheet" />
-            <link rel="stylesheet" href="stylemobil.css"/>
-            <script src="scriptmobil.js"></script>
+            <link rel="stylesheet" href="style.css"/>
+            <script src="script.js"></script>
         </head>
         <body>
 
